--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,27 @@
 <resources>
-    <string name="app_name">TrackIT</string>
+    <string name="app_name">App name</string>
 
     <!-- General -->
     <string name="ok">OK</string>
-    <string name="kcal">kcal</string>
+    <string name="please_wait">Please wait…</string>
+
+    <string name="cal">cal</string>
     <string name="carbs">Carbs</string>
     <string name="fats">Fats</string>
-    <string name="protein">Protein</string>
+    <string name="proteins">Proteins</string>
     <string name="calories">Calories</string>
     <string name="value_unit">%s %s</string>
-    <string name="value">%.1f</string>
+    <string name="value_percent">%d%%</string>
+    <string name="value_slash_value_g">%d/%dg</string>
+    <string name="value_1f">%.1f</string>
     <string name="value_g">%sg</string>
+    <string name="int_g">%dg</string>
 
     <!-- Toolbar title -->
     <string name="title_search">Search</string>
-    <string name="title_home">Nutrition</string>
     <string name="title_water">Water</string>
     <string name="title_activity">Activity</string>
+    <string name="title_nutrition">Nutrition</string>
 
     <!-- nutrition home -->
     <string name="snacks">Snacks</string>
@@ -24,9 +29,11 @@
     <string name="dinner">Dinner</string>
     <string name="breakfast">Breakfast</string>
 
+    <string name="nutrition_dashboard_goal_calories">Goal %d</string>
+    <string name="nutrition_dashboard_goal_weight">Goal %dkg</string>
+
     <string name="header_weight">Weight</string>
     <string name="menu_nutrition_statistics">Statistics</string>
-    <string name="title_nutrition">Nutrition</string>
 
     <!-- nav menu -->
     <string name="nav_menu_nutrition">Nutrition</string>
@@ -40,6 +47,8 @@
 
     <!-- nutrition details -->
     <string name="details_card_header">Nutrition Facts</string>
+    <string name="nutrition_detaails_btn_more">more</string>
+    <string name="nutrition_details_serving_size_header">Serving size</string>
 
     <!-- Login -->
     <string name="login_header">Login Account</string>
@@ -124,7 +133,11 @@
     <string name="onboarding_info_header_height">Height</string>
     <string name="onboarding_info_header_age">Age</string>
 
+    <!-- OnBoarding alert dialog -->
     <string name="alert_title_invalid_weight_input">Invalid weight goal</string>
     <string name="alert_message_invalid_weight_input_lose">Goal is set to <i>lose weight</i> so goal weight should be less than current weight</string>
     <string name="alert_message_invalid_weight_input_gain">Goal is set to <i>gain weight</i> so goal weight should be more than current weight</string>
+
+    <!-- Meal -->
+    <string name="meal_goal_header">Goal</string>
 </resources>
